--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,54 @@
-.game-board {
-    display: grid;
-    grid-template-rows: 200px 200px 200px;
-    grid-template-columns: 200px 200px 200px;
+body {
+    margin: 0;
+}
+
+.cardBlock {
+    background: linear-gradient(to bottom, #ffbdbd 21%, #f1cbff 128%);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin: 40px;
+    align-items: center;
+    height: 100vh;
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
-    color: #434d54;
     text-align: center;
+    font-size: 42px;
+    font-family: 'Ropa Sans', sans-serif;
+    color: #3a3a3a;
 }
 
-body {
-    background-image: url('/imgs/world.png');
-    background-size: cover;
-    justify-content: center;
-}
-
-.box {
-    background: #444;
-    border: 1px solid #555;
+.flex-container {
+    width: 600px;
+    height: 600px;
     display: flex;
-    align-items: center;
+    flex-flow: wrap row;
+    align-content: center;
     justify-content: center;
+}
+
+.card-container {
+    width: 160px;
+    height: 160px;
     margin: 5px;
-    font-family: 'Roboto', sans-serif;
-    background-color: #FCB8AF;
-    color:#7289da
+    font-size: 20px;
+    font-family: 'Ropa Sans', sans-serif;
+    position: relative;
+    transition: all 1s linear;
+    transform-style: preserve-3d;
+}
+
+.front {
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #3a3a3a;
+    position: absolute;
+    z-index: 2;
+    backface-visibility: hidden;
 }
