--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,20 @@
 body {
     margin: 0;
+    padding: 0;
+    /*background-image: url("../imgs/world.png");*/
+    /*background-size: cover;*/
+    /*background-size: 100% 100%;*/
+    /*height: 100%;*/
+    /*position: relative;*/
+    background: linear-gradient(to bottom, #ffafcc 21%, #a2d2ff 128%);
+    background-size: 100% 100%;
 }
+
 
 .cardBlock {
-    background: linear-gradient(to bottom, #00AEEF 21%, #f1cbff 128%);
-    background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-}
-
-h1 {
-    text-align: center;
-    font-size: 42px;
-    font-family: 'Ropa Sans', sans-serif;
-    color: #3a3a3a;
 }
 
 .flex-container {
@@ -24,32 +22,60 @@ h1 {
     height: 600px;
     display: flex;
     flex-flow: wrap row;
-    align-content: center;
     justify-content: center;
+    align-items: center;
 }
 
-.card-container {
-    width: 160px;
-    height: 160px;
+.card {
+    width: 180px;
+    height: 180px;
     margin: 5px;
-    font-size: 20px;
-    font-family: 'Ropa Sans', sans-serif;
+    border-color: #3a3a3a;
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 15px;
     position: relative;
     transition: all 1s linear;
     transform-style: preserve-3d;
+}
+
+.card-container {
+    perspective: 800px;
+}
+
+.front,
+.back {
+    height: 100%;
+    width: 100%;
+    /*border-radius: 2rem;*/
+    /*box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    position: absolute;
 
 }
 
 .front {
-    width: 100%;
-    height: 100%;
-    background: #ffffff;
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #3a3a3a;
-    position: absolute;
-    z-index: 2;
+    background: #ffffff;
     backface-visibility: hidden;
+    z-index: 2;
+}
+
+.back {
+    color: #ffffff;
+    background: #3a3a3a;
+    z-index: 1;
+    transform: rotateY(180deg) rotateZ(90deg);
+}
+.card-container:hover .card {
+    transform: rotateY(180deg) rotateZ(90deg);
+}
+
+h1 {
+    text-align: center;
+    font-size: 42px;
+    font-family: 'Ropa Sans', sans-serif;
+    color: #3a3a3a;
 }
